--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:focus-visible {
+    outline: 2px solid gray;
+    outline-offset: 4px;
+    border-radius: 2px;
+}
+
